# example_servant_elm_bazel

./: .bazelrc  LICENSE  README.md  WORKSPACE  package.json  stackage_snapshot.json
.github/workflows/: ci.yml
api/: Api.hs  BUILD.bazel  GenerateElm.hs  Models.hs
backend/: BUILD.bazel  Db.hs  Main.hs  Server.hs  Test.hs
frontend/: BUILD.bazel  Main.elm  index.html
